--- a/cmd/android/magopie/app/src/main/res/layout/content_main.xml
+++ b/cmd/android/magopie/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,9 +10,62 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.bullercodeworks.magopie.MainActivity">
+  <LinearLayout android:id="@+id/layoutSearch"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      android:gravity="center_vertical">
+    <ImageView android:id="@+id/imgMagoLogo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/magopie"
+        android:layout_marginBottom="40dp"/>
 
-    <TextView android:id="@+id/helloText"
+    <TextView android:id="@+id/txtSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
-</RelativeLayout>
+        android:text="Search"
+        android:textSize="12dip"/>
+    <EditText android:id="@+id/inpSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2">
+        <Button android:id="@+id/btnAbout"
+                android:text="About Magopie"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_weight="1"/>
+        <Button android:id="@+id/btnSearch"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:text="GO!"/>
+    </LinearLayout>
+  </LinearLayout>
+  <LinearLayout
+      android:id="@+id/layoutResults"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+    <TextView android:id="@+id/txtSearch"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Search"
+              android:textSize="12dip"/>
+    <EditText android:id="@+id/inpResultSearch"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:imeOptions="actionDone"
+              android:inputType="text"/>
+    <ListView android:id="@+id/resultList"
+        android:listSelector="#00000000"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+  </LinearLayout>
+</FrameLayout>
