Cleaning up Config Screen

--- a/cmd/android/magopie/app/src/main/res/layout/content_main.xml
+++ b/cmd/android/magopie/app/src/main/res/layout/content_main.xml
@@ -15,6 +15,11 @@
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center_vertical">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/magopie_logo_text"/>
+
     <ImageView android:id="@+id/imgMagoLogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
