--- a/cmd/android/magopie/app/src/main/res/layout/content_config.xml
+++ b/cmd/android/magopie/app/src/main/res/layout/content_config.xml
@@ -31,35 +31,18 @@
       android:layout_height="wrap_content"
       android:inputType="textUri"/>
 
-  <!--
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Username"/>
-        <EditText android:id="@+id/txtUsername"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:inputType="text" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Password"/>
-        <EditText android:id="@+id/txtPassword"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:inputType="textPassword" />
-    </LinearLayout>
-    -->
+  <TextView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="API Token"/>
 
-    <Button android:id="@+id/btnSaveConfig"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Save" />
+  <EditText android:id="@+id/txtApiToken"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="text" />
+
+  <Button android:id="@+id/btnSaveConfig"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Save" />
 </LinearLayout>
